fix: fix mobile broken layout

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,6 +6,3 @@
 Add additional Tailwind styles to this file, for example with @layer:
 https://tailwindcss.com/docs/adding-custom-styles#using-css-and-layer
 */
-header.header {
-  @apply h-fit;
-}
